<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dialog_padding_x"
    android:paddingEnd="@dimen/dialog_padding_x"
    android:paddingTop="@dimen/dialog_padding_y"
    android:paddingBottom="@dimen/dialog_padding_y"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/dialog_sort_type_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/dialog_sort_type_alphabetically_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_alphabetically" />

        <RadioButton
            android:id="@+id/dialog_sort_type_creation_date_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_date_created" />

        <RadioButton
            android:id="@+id/dialog_sort_type_modified_date_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_date_modified" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/dialog_sort_favorites_on_top_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sort_by_favorites_top" />

</LinearLayout>