<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- App -->
    <string name="app_version">Version <xliff:g example="1.0b">%s</xliff:g></string>

    <!-- Generic -->
    <string name="remove">Remove</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="about">About</string>
    <string name="general">General</string>
    <string name="photo">Photo</string>
    <string name="database">Database</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="undo">Undo</string>
    <string name="done">Done</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="tag">Tag</string>
    <string name="debug">Debug</string>
    <string name="ok">OK</string>

    <!-- Errors -->
    <string name="error_missing_title_text">Write a title or text first..</string>

    <!-- Note -->
    <string name="note">Note</string>
    <string name="creation_date">Created: <xliff:g example="Jun 1, 2019 10:55" id="date">%s</xliff:g></string>
    <string name="modified_date">Updated: <xliff:g example="Jun 2, 2019 12:00" id="date">%s</xliff:g></string>
    <string name="note_trashed">Note moved to trash</string>
    <string name="note_trashed_detailed">Note \'<xliff:g example="Shopping List" id="noteTitle">%s</xliff:g>\' moved to trash</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note_deleted_detailed">Note \'<xliff:g example="Shopping List" id="noteTitle">%s</xliff:g>\' deleted</string>
    <string name="note_restored">Note restored</string>
    <string name="note_restored_detailed">Note \'<xliff:g example="Shopping List" id="noteTitle">%s</xliff:g>\' restored</string>
    <string name="note_favorites_added">Added to favorites</string>
    <string name="note_favorites_removed">Removed from favorites</string>
    <string name="note_saved">Note saved</string>
    <string name="note_photo_removed">Photo removed</string>

    <!-- Date -->
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <!-- Reminder -->
    <string name="reminder_set">Reminder set for <xliff:g example="date" id="dateString">%s</xliff:g></string>
    <string name="reminder_removed">Reminder removed</string>

    <!-- Confirm Alert -->
    <string name="confirm_deletion">Delete Note?</string>
    <string name="confirm_trash">Trash Note?</string>
    <string name="confirm_trash_message">Move the Note to trash, you can restore it later.</string>
    <string name="confirm_deletion_message">The Note can\'t be restored after this, are you sure?</string>
    <string name="confirm_empty_trash">Empty trash?</string>
    <string name="confirm_empty_trash_message">Delete ALL trashed Notes, are you sure!?</string>
    <string name="confirm_restore">Restore Note?</string>
    <string name="confirm_restore_message">Move the Note out of trash.</string>
    <string name="confirm_photo_delete">Delete Photo?</string>
    <string name="confirm_restore_db">Restore database?</string>
    <string name="confirm_restore_db_message">Delete all current data and restore from most recent backup, are you sure!?</string>
    <string name="deleted_all_notes">Deleted all Notes!</string>

    <!-- Titles -->
    <string name="note_new">New Note</string>
    <string name="note_trash">Note (trashed)</string>

    <!-- Menu -->
    <string name="action_all_notes">All Notes</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_reminders">Reminders</string>
    <string name="action_reminder">Reminder</string>
    <string name="action_tags">Tags</string>
    <string name="action_trash">Trash</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_delete">Delete</string>
    <string name="action_restore">Restore</string>
    <string name="action_favoritize">Favoritize</string>
    <string name="action_unfavoritize">Unfavoritize</string>
    <string name="action_empty_trash">Empty trash</string>
    <string name="action_sort">Sort</string>
    <string name="action_search">Search</string>
    <string name="action_photo">Take Photo</string>
    <string name="action_share">Share</string>
    <string name="action_rate">Rate</string>

    <!-- Swipe Messages -->
    <string name="swipe_delete">Delete</string>
    <string name="swipe_restore">Restore</string>
    <string name="swipe_trash">To trash</string>

    <!-- Tags -->
    <string name="tag_new">New Tag</string>
    <string name="tag_edit">Edit Tag</string>
    <string name="tag_delete_title">Delete Tag?</string>
    <string name="tag_delete_message">Delete \'<xliff:g example="Personal" id="tag">%s</xliff:g>\' and remove it from all associated Notes. No Note will be deleted by this action.</string>
    <string name="tag_deleted_toast">Tag \'<xliff:g example="Personal" id="tag">%s</xliff:g>\' deleted</string>

    <!-- Sorting -->
    <string name="sort_by">Sort Notes</string>
    <string name="sort_by_ascending">Asc</string>
    <string name="sort_by_descending">Desc</string>
    <string name="sort_by_alphabetically">Alphabetically (title)</string>
    <string name="sort_by_date_created">Creation date</string>
    <string name="sort_by_date_modified">Modified date</string>
    <string name="sort_by_favorites_top">Favorites on top</string>

    <!-- Hints -->
    <string name="hint_title">Title..</string>
    <string name="hint_text">Notes..</string>
    <string name="hint_tag">Tag..</string>

    <!-- Empty Lists -->
    <string name="list_is_empty">You have no Notes in this section..</string>
    <string name="trash_is_empty">Trash is empty..</string>
    <string name="search_is_empty">No Note match the query..</string>

    <!-- Tools -->
    <string name="tools_headline" translatable="false">Important stuff</string>
    <string name="tools_text" translatable="false">This is some text containing very important stuff, this might even span through many lines. Indeed this text is super important and must be quite long, it must be longer than three rows so that the three dots are allowed to appear in the tools.</string>
    <string name="tools_date" translatable="false">May 1, 2019 11:55</string>
    <string name="tools_date_created" translatable="false">Created: May 1, 11:55</string>
    <string name="tools_date_updated" translatable="false">Updated: May 1, 11:55</string>
    <string name="tools_reminder_set" translatable="false">Reminder set for May 5, 12:00</string>
    <string name="tools_tags" translatable="false">#Personal #Work #Other #Exercise</string>
    <string name="tools_tag" translatable="false">#This is a tag</string>

    <!-- Content Descriptions -->
    <string name="cont_nav_drawer_open">Open navigation drawer</string>
    <string name="cont_nav_drawer_close">Close navigation drawer</string>
    <string name="cont_new_note">Add new note</string>
    <string name="cont_save_note">Save note</string>
    <string name="cont_new_tag">Add new tag</string>
    <string name="cont_favorite">Favorite</string>
    <string name="cont_reminder">Reminder</string>
    <string name="cont_tag_title">Tag title</string>
    <string name="cont_tag_delete">Delete tag</string>
    <string name="cont_photo_take">Take photo</string>
    <string name="cont_photo_delete">Delete photo</string>
    <string name="cont_photo">Note photo</string>
    <string name="cont_counter">Counter</string>

    <!-- Pre defined Tags -->
    <string name="tag_personal">Personal</string>
    <string name="tag_work">Work</string>

    <!-- Preference Titles -->
    <string name="theme">Theme</string>
    <string name="data">Data</string>

    <!-- Preferences -->
    <string name="dark_theme_title">Dark Theme</string>
    <string name="dark_theme_summary">Change app theme to dark.</string>
    <string name="dark_theme_key" translatable="false">dark_theme</string>
    <string name="about_app_key" translatable="false">about_app</string>
    <string name="sort_favorites_on_top_title">Favorites on top</string>
    <string name="sort_favorites_on_top_summary">Places your favoritized notes on top of all lists.</string>
    <string name="sort_favorites_on_top_key" translatable="false">sort_favorites_on_top</string>
    <string name="time_24_key" translatable="false">time_24</string>
    <string name="time_24_title">24-hour format</string>
    <string name="time_24_summary">Override your locale settings</string>
    <string name="about_other_apps_key" translatable="false">about_apps</string>
    <string name="about_other_apps_title">Google Play</string>
    <string name="about_other_apps_summary">Try my other Apps</string>
    <string name="backup_key" translatable="false">backup</string>
    <string name="backup_summary">Save database to local storage, files will be located in <xliff:g example="/storage/backup/" id="path">%s</xliff:g>. Please note that this doesn\'t backup photos</string>
    <string name="restore_key" translatable="false">restore</string>
    <string name="restore_summary">Use latest backup to restore database</string>
    <string name="dummy_data_key" translatable="false">dummy_data</string>
    <string name="dummy_data_title">Insert dummy data</string>
    <string name="dummy_data_summary">Adds a set of Notes into database for testing</string>
    <string name="clear_db_key">clear_db</string>
    <string name="clear_db_title">Clear database</string>
    <string name="clear_db_summary">Delete all Notes</string>

    <!-- Backup -->
    <string name="backup_saved_to">Backup saved to <xliff:g example="/storage/backup/" id="path">%s</xliff:g></string>
    <string name="backup_restored">Backup restored</string>
    <string name="backup_restored_failed">No backup found, restore failed</string>

    <!-- Notifications -->
    <string name="notification_channel_reminders_title">Reminders</string>

    <!-- About -->
    <string name="developer">Developer</string>
    <string name="libraries">Libraries</string>
    <string name="app_icon">App Icon</string>
    <string name="about_app_icon">The app launch icon is made by &lt;a href=\"https://www.freepik.com/\" title=\"Freepik\">Freepik&lt;/a> from &lt;a href=\"https://www.flaticon.com/\" title=\"Flaticon\">www.flaticon.com&lt;/a> and is licensed by &lt;a href=\"http://creativecommons.org/licenses/by/3.0/\" title=\"Creative
Commons BY 3.0\">CC 3.0 BY&lt;/a>.</string>
    <string name="about_libraries">These external libraries were used when building this app: &lt;a href=\"https://firebase.google.com/\">Firebase&lt;/a>, &lt;a href=\"https://github.com/johncarl81/parceler/\">Parceler&lt;/a>, &lt;a href=\"http://robolectric.org/\">Robolectric&lt;/a>, &lt;a href=\"https://github.com/jsibbold/zoomage/\">Zoomage&lt;/a>.</string>

    <!-- Dev -->
    <string name="dev_dummy_data_inserted">Inserted dummy data</string>
    <string name="dev_database_cleared">Database cleared</string>

</resources>
