<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_notelist_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_notelist_recyclerview"
        style="@style/RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />

    <!-- FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragment_notelist_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/cont_new_note"
        app:srcCompat="@drawable/ic_add"
        app:layout_anchor="@id/fragment_notelist_recyclerview"
        app:layout_anchorGravity="bottom|end" />

    <!-- Empty informer -->
    <TextView
        android:id="@+id/fragment_notelist_is_empty_textview"
        style="@style/EmptyInformer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/list_is_empty"
        app:layout_anchor="@id/fragment_notelist_recyclerview"
        app:layout_anchorGravity="center_vertical|center_horizontal"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>