...
                android:contentDescription="@string/cont_favorite"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_star_list"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/list_note_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
...
